RavenDB-15723 Connection strings view title visibility fix

--- a/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
@@ -569,3 +569,9 @@
     
     
 }
+
+#connection-strings {
+    .connection-string-title {
+        margin-right: 7.5px;
+    }
+}
